--- a/_includes/world/2025/homepage_sections/hero_banner.html
+++ b/_includes/world/2025/homepage_sections/hero_banner.html
@@ -1,13 +1,13 @@
 <div class="hero-banner">
-  <div class="floating-polygons-container left-side">
-    <div class="polygon-top-left">
-      <div class="polygon-frame">
-        <img src="/assets/world/2025/images/polygones/polygon1.jpg" alt="people attending rails world talk" />
+  <div class="floating-hexagons-container left-side">
+    <div class="hexagon-top-left">
+      <div class="hexagon-frame">
+        <img src="/assets/world/2025/images/hexagons/hexagon1.jpg" alt="people attending rails world talk" />
       </div>
     </div>
-    <div class="polygon-bottom-left">
-      <div class="polygon-frame">
-        <img src="/assets/world/2025/images/polygones/polygon2.jpg" alt="rail world booths" />
+    <div class="hexagon-bottom-left">
+      <div class="hexagon-frame">
+        <img src="/assets/world/2025/images/hexagons/hexagon2.jpg" alt="rail world booths" />
       </div>
     </div>
   </div>
@@ -17,15 +17,15 @@
     <a href="#" class="button-primary disabled"><span>Tickets coming soon!</span></a>
   </div>
 
-  <div class="floating-polygons-container right-side">
-    <div class="polygon-top-right">
-      <div class="polygon-frame">
-        <img src="/assets/world/2025/images/polygones/polygon3.png" alt="Top right polygon" />
+  <div class="floating-hexagons-container right-side">
+    <div class="hexagon-top-right">
+      <div class="hexagon-frame">
+        <img src="/assets/world/2025/images/hexagons/hexagon3.jpg" alt="rails world 2025 venue at Amsterdam" />
       </div>
     </div>
-    <div class="polygon-bottom-right">
-      <div class="polygon-frame">
-        <img src="/assets/world/2025/images/polygones/polygon4.jpg" alt="people attending rails world talk" />
+    <div class="hexagon-bottom-right">
+      <div class="hexagon-frame">
+        <img src="/assets/world/2025/images/hexagons/hexagon4.jpg" alt="people attending rails world talk" />
       </div>
     </div>
   </div>
