--- a/_sass/world/2025/modules/_hero_banner.scss
+++ b/_sass/world/2025/modules/_hero_banner.scss
@@ -15,7 +15,7 @@
     height: 60vh;
   }
 
-  .floating-polygons-container {
+  .floating-hexagons-container {
     position: absolute;
     width: 25%;
     display: grid;
@@ -61,13 +61,13 @@
     }
   }
 
-  // position floating polygons within their containers
-  .polygon-top-left {
+  // position floating hexagons within their containers
+  .hexagon-top-left {
     display: flex;
     justify-content: center;
     align-items: center;
 
-    .polygon-frame {
+    .hexagon-frame {
       width: 350px;
       height: 400px;
       opacity: 75%;
@@ -84,7 +84,7 @@
     }
   }
 
-  .polygon-bottom-left {
+  .hexagon-bottom-left {
     display: flex;
     align-items: flex-end;
     justify-content: flex-end;
@@ -95,7 +95,7 @@
       margin-left: -70px;
     }
 
-    .polygon-frame {
+    .hexagon-frame {
       width: 250px;
       height: 270px;
       opacity: 50%;
@@ -112,7 +112,7 @@
     }
   }
 
-  .polygon-top-right {
+  .hexagon-top-right {
     display: flex;
     align-items: flex-start;
 
@@ -121,7 +121,7 @@
       justify-content: flex-end;
     }
 
-    .polygon-frame {
+    .hexagon-frame {
       width: 300px;
       height: 350px;
       opacity: 65%;
@@ -138,7 +138,7 @@
     }
   }
 
-  .polygon-bottom-right {
+  .hexagon-bottom-right {
     display: flex;
     align-items: flex-end;
     justify-content: center;
@@ -149,7 +149,7 @@
       margin-right: -60px;
     }
 
-    .polygon-frame {
+    .hexagon-frame {
       width: 200px;
       height: 220px;
       opacity: 50%;
