--- a/assets/css/world-2025.scss
+++ b/assets/css/world-2025.scss
@@ -24,3 +24,4 @@
 @import 'world/2025/modules/homepage';
 @import "world/2025/modules/image_carousel";
 @import "world/2025/modules/navbar";
+@import "world/2025/modules/rails_at_scale";
