convert blog post titles to h1 while keeping the styles

--- a/_sass/modules/_post.scss
+++ b/_sass/modules/_post.scss
@@ -12,6 +12,11 @@
     margin: -7px 30px -6px 30px;
     text-align: center;
 
+    h1 {
+      font-size: 55px;
+      line-height: 52px;
+    }
+
     h5 {
       margin-bottom: 16px;
     }
