--- a/_sass/world/2025/modules/rails_at_scale.scss
+++ b/_sass/world/2025/modules/rails_at_scale.scss
@@ -114,6 +114,7 @@
       }
 
       img {
+        margin-bottom: 30px;
         object-fit: cover;
         width: 100%;
         height: 500px;
@@ -123,6 +124,5 @@
         }
       }
     }
-
   }
 }
