--- a/_includes/world/2025/homepage_sections/sponsors.html
+++ b/_includes/world/2025/homepage_sections/sponsors.html
@@ -6,8 +6,8 @@
       <div></div>
       <div>
         <p class="larger">
-          Sponsoring Rails World means showcasing your brand to a  <span class="bold">global audience of Rails enthusiasts</span>, developers, and industry leaders.
-          Let's make Rails World an unforgettable experience for all.
+          Sponsoring Rails World means showcasing your brand to a  <span class="bold">global audience of Rails enthusiasts</span>, developers, and maintainers.
+          Get in touch and help make Rails World an unforgettable experience for all.
         </p>
         <a href="https://public.3.basecamp.com/p/KZTZxpc6BVtMSH9Vv4PWAMN9" class="button-secondary" target="_blank"><span>View prospectus</span></a>
       </div>
