--- a/_includes/world/2025/homepage_sections/intro.html
+++ b/_includes/world/2025/homepage_sections/intro.html
@@ -10,7 +10,7 @@
     </div>
 
     <div class="illustration-container">
-      <img src="/assets/world/2025/images/image_with_shape.png" alt="attendees at Rails World" class="illustration" />
+      <img src="/assets/world/2025/images/image_with_shape.png" alt="attendees at rails world" class="illustration" />
     </div>
   </div>
 </div>
