RW 25 - First phase - Homepage, FAQ & Rails at Scale pages (#477)
* basic components and homepage

* add footer

* add navbar and announcement banner

* homepage mobile-friendly

* navbar responsive

* faq page

* fix button primary

* secondary button

* refactor button style

* front-end adjustments

* work on responsiveness

* responsiveness

* responsiveness on mobile - need to adjust the hero banner

* adjustments for responsiveness + udpate faq content

* implement feedback on homepage

* fix faq tabs

* remove commented code

* implement feedback round 2

* refactor faq

* add back to top button

* update carousel and polygon images

* active faq tab

* update images

* add missing sponsor logos

* rails at scale page

* adjust logos size

* front end adjustments

* clean css

* Update announcements.yml

* Update faq.yml

* Update sponsors.yml

* Update sponsors.html

* Update faq.yml

* Update intro.html

* Update intro.html

* Update sponsors.yml

* Update faq.yml

* Update faq.yml

---------

Co-authored-by: Amanda Perino <58528404+AmandaPerino@users.noreply.github.com>

--- a/_sass/world/2025/base/_colors.scss
+++ b/_sass/world/2025/base/_colors.scss
@@ -1,3 +1,11 @@
 $dark-purple: #3B1D62;
-$pink-purple: #880C51;
-$purple-pink-gradient: linear-gradient(180deg, $dark-purple, $dark-purple, $pink-purple, $pink-purple);
+$fushia: #880C51;
+$red: #CB0C1C;
+$pink: #FF18A2;
+
+// Gradients
+$button-gradient: linear-gradient(90deg, #3B1D62 47%, $red 100%);
+$button-secondary-gradient: linear-gradient(270deg, $dark-purple 17%, $red 100%);
+$purple-gradient: linear-gradient(180deg, $dark-purple, $dark-purple, $fushia, $fushia);
+$red-gradient: linear-gradient(180deg, $red, $red, $dark-purple, $dark-purple);
+$fushia-to-red-gradient: linear-gradient(90deg, #880C51 0%, $red 100%);
