create terms and condition page

--- a/_includes/world/2025/homepage_sections/social.html
+++ b/_includes/world/2025/homepage_sections/social.html
@@ -15,7 +15,7 @@
       <p>Sign up to the<br>mailing list</p>
     </a>
 
-    <a href="https://rubyonrails.org/world/2023/terms" target="_blank" class="social-card">
+    <a href="/world/2025/terms" target="_blank" class="social-card">
       <img src="/assets/world/2025/icons/Policy_document.png" alt="document icon"/>
       <p>Terms &<br>Conditions</p>
     </a>
