--- a/assets/css/world-2025.scss
+++ b/assets/css/world-2025.scss
@@ -23,5 +23,6 @@
 @import "world/2025/modules/hero_banner";
 @import 'world/2025/modules/homepage';
 @import "world/2025/modules/image_carousel";
+@import "world/2025/modules/legal";
 @import "world/2025/modules/navbar";
 @import "world/2025/modules/rails_at_scale";
