different announcements on index and rails at scale pages

--- a/_includes/world/2025/components/announcement_banner.html
+++ b/_includes/world/2025/components/announcement_banner.html
@@ -1,10 +1,5 @@
-{% assign announcements = site.data.world['2025'].announcements %}
-{% if announcements %}
-  <div class="announcement-banner {{ include.background_color }}">
-    {% for announcement in announcements %}
-      <div class="content">
-        <p>{{ announcement.content | html }}</p>
-      </div>
-    {% endfor %}
+<div class="announcement-banner {{ include.background_color }}">
+  <div class="content">
+    <p>{{ include.content }}</p>
   </div>
-{% endif %}
+</div>
