--- a/_layouts/world/2025/rails_at_scale.html
+++ b/_layouts/world/2025/rails_at_scale.html
@@ -1,9 +1,11 @@
+{% assign announcement = site.data.world['2025'].announcements.rails_at_scale %}
+
 <!DOCTYPE html>
 
 <html lang="en" style="scroll-behavior: smooth">
   {% include world/2025/head.html %}
   <body class="red-gradient-background">
-    {% include world/2025/components/announcement_banner.html background_color="purple-background" %}
+    {% include world/2025/components/announcement_banner.html background_color="purple-background" content=announcement %}
     {% include world/2025/components/navbar.html background_color="red-background" %}
 
     <main id="main-content" tabindex="-1">
