--- a/_sass/world/2025/modules/_homepage.scss
+++ b/_sass/world/2025/modules/_homepage.scss
@@ -128,3 +128,11 @@
     row-gap: 50px;
   }
 }
+
+.homepage .speaker-cards-container {
+  margin-top: 120px;
+
+  h2 {
+    font-size: 60px;
+  }
+}
