--- a/assets/css/world-2025.scss
+++ b/assets/css/world-2025.scss
@@ -25,4 +25,5 @@
 @import "world/2025/modules/image_carousel";
 @import "world/2025/modules/legal";
 @import "world/2025/modules/navbar";
+@import "world/2025/modules/speaker_card";
 @import "world/2025/modules/rails_at_scale";
