speaker carousel on homepage

--- a/_includes/world/2025/homepage_sections/image_carousel.html
+++ b/_includes/world/2025/homepage_sections/image_carousel.html
@@ -1,4 +1,4 @@
-<div class="section full-height mobile-fit-content">
+<div class="section world-images-container full-height mobile-fit-content">
   <div class="carousel-container">
     <div class="scroll-carousel">
       <img src="/assets/world/2025/images/carousel/carousel1.jpg" alt="people networking" />
