--- a/assets/css/world-2025.scss
+++ b/assets/css/world-2025.scss
@@ -26,4 +26,5 @@
 @import "world/2025/modules/legal";
 @import "world/2025/modules/navbar";
 @import "world/2025/modules/speaker_card";
+@import "world/2025/modules/speaker_carousel";
 @import "world/2025/modules/rails_at_scale";
