--- a/_sass/world/2025/common/_hexagon_frame.scss
+++ b/_sass/world/2025/common/_hexagon_frame.scss
@@ -3,6 +3,16 @@
   width: 260px;
   height: 280px;
 
+  @include media(MobileScreens) {
+    width: 180px;
+    height: 200px;
+  }
+
+  @include media(MobileScreens) {
+    width: 200px;
+    height: 220px;
+  }
+
   img {
     width: 100%;
     height: 100%;
