--- a/_sass/world/2025/modules/_speaker_carousel.scss
+++ b/_sass/world/2025/modules/_speaker_carousel.scss
@@ -2,7 +2,11 @@
   display: flex;
   align-items: center;
   position: relative;
-  margin: 60px 0;
+  margin: 60px;
+
+  @include media(MobileAndTabletScreens) {
+    margin: 60px 25px;
+  }
 }
 
 .carousel-wrapper {
@@ -20,6 +24,14 @@
   scroll-snap-type: x mandatory;
   scrollbar-width: none;
   padding-inline: 40px;
+
+  @include media(MobileScreens) {
+    padding-inline: 0;
+  }
+
+  @include media(TabletScreens) {
+    padding-inline: 20px;
+  }
 }
 .speaker-carousel::-webkit-scrollbar {
   display: none;
@@ -29,18 +41,31 @@
 .speaker-carousel > * {
   flex: 0 0 calc((100% / 3)); /* show 3 cards with 1rem gaps */
   scroll-snap-align: start;
+
+  @include media(MobileScreens) {
+    flex: 0 0 100%;
+  }
+
+  @include media(TabletScreens) {
+    flex: 0 0 50%;
+  }
 }
 
 .carousel-arrow {
   position: absolute;
   width: 20px;
   cursor: pointer;
+
+  @include media(MobileScreens) {
+    width: 15px;
+  }
 }
 
 .carousel-arrow.left {
   rotate: 180deg;
-  left: 50px;
+  left: 0;
 }
+
 .carousel-arrow.right {
-  right: 50px;
+  right: 0;
 }
