speaker index and show page - wip

--- a/_includes/world/2025/components/navbar_links.html
+++ b/_includes/world/2025/components/navbar_links.html
@@ -1,2 +1,3 @@
+<a href="/world/2025/speakers" class="nav-link">Speakers</a>
 <a href="/world/2025/faq/general" class="nav-link">FAQs</a>
 <a href="/world/2025/rails_at_scale" class="nav-link">Rails at Scale Summit</a>
