--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,7 +1,7 @@
 <div class="banner text--align-center">
   <p>
     <a class="common-button--text" href="https://rubyonrails.org/world/2025" target="_blank">
-      General Admission tickets available TODAY - May 13, 5pm CEST
+      [Rails World 2025] General Admission tickets available - Book now
     </a>
   </p>
 </div>
