--- a/_includes/world/2025/homepage_sections/speaker_carousel.html
+++ b/_includes/world/2025/homepage_sections/speaker_carousel.html
@@ -26,7 +26,7 @@
   </div>
 
   <div class="button-center">
-    <a href="" class="button-primary"><span>Go to speaker showcase</span></a>
+    <a href="/world/2025/speakers" class="button-primary"><span>Go to speaker showcase</span></a>
   </div>
 </div>
 
