--- a/_sass/world/2025/base/_layout.scss
+++ b/_sass/world/2025/base/_layout.scss
@@ -44,9 +44,13 @@ body {
     h1, h2, h3 { text-align: center; }
   }
 
-  &.description-center {
-    p {
-      text-align: center;
-    }
+}
+
+.container-center {
+  text-align: center;
+  padding: 0 10%;
+
+  @include media(MobileAndTabletScreens) {
+    padding: 0 5%;
   }
 }
