--- a/_layouts/world/2025/speaker.html
+++ b/_layouts/world/2025/speaker.html
@@ -3,7 +3,7 @@ layout: world/2025/default
 ---
 
 {% assign speaker_id = page.path | split: '/' | last %}
-<!-- {% assign filteredSessions = site.world_sessions | where_exp: 'item', 'item.path contains "2025"'%} -->
+{% assign filteredSessions = site.world_sessions | where_exp: 'item', 'item.path contains "2025"'%}
 {% assign speakerSessions = filteredSessions | where: 'speaker', speaker_id %}
 {% assign secondarySessions = filteredSessions | where: 'second_speaker', speaker_id %}
 {% assign thirdSessions = filteredSessions | where: 'third_speaker', speaker_id %}
@@ -43,15 +43,13 @@ layout: world/2025/default
     </div>
   </div>
 
-  <!-- <div class="speaker-sessions">
-    <div class="title-background-gradient">
-      <h2>Sessions</h2>
-    </div>
+  <div class="speaker-sessions">
+    <h2>Sessions by this speaker</h2>
 
     <div class="sessions-container">
       {% for session in speakerSessions %}
-        {% include world/2025/components/session-card.html session=session speaker=page %}
+        {% include world/2025/components/session_card.html session=session speaker=page %}
       {% endfor %}
     </div>
-  </div> -->
+  </div>
 </div>
