--- a/_includes/world/2025/homepage_sections/speaker_carousel.html
+++ b/_includes/world/2025/homepage_sections/speaker_carousel.html
@@ -13,7 +13,7 @@
           include world/2025/components/speaker_card.html
           first_name=speaker.first_name
           last_name=speaker.last_name
-          role=speaker.role
+          tagline=speaker.tagline
           company=speaker.company
           photo=speaker.image_path
           path=speaker.path
