add speaker sessions

--- a/_includes/world/2025/components/session_card.html
+++ b/_includes/world/2025/components/session_card.html
@@ -25,5 +25,5 @@
 
 <div class="session-card">
   <h3>{{ session.title }}</h3>
-  <p>{{ include.speaker.first_name }} {{ include.speaker.last_name }}, {{ include.speaker.role }}{% if include.speaker.company %}, {{ include.speaker.company }} {% endif %}</p>
+  <p>{{ include.speaker.first_name }} {{ include.speaker.last_name }} - {{ include.speaker.tagline }}{% if include.speaker.company %}, {{ include.speaker.company }} {% endif %}</p>
 </div>
