--- a/_layouts/world/2025/speaker.html
+++ b/_layouts/world/2025/speaker.html
@@ -43,13 +43,15 @@ layout: world/2025/default
     </div>
   </div>
 
-  <div class="speaker-sessions">
-    <h2>Sessions by this speaker</h2>
+  {% if speakerSessions.size > 0 %}
+    <div class="speaker-sessions">
+      <h2>Sessions by this speaker</h2>
 
-    <div class="sessions-container">
-      {% for session in speakerSessions %}
-        {% include world/2025/components/session_card.html session=session speaker=page %}
-      {% endfor %}
+      <div class="sessions-container">
+        {% for session in speakerSessions %}
+          {% include world/2025/components/session_card.html session=session speaker=page %}
+        {% endfor %}
+      </div>
     </div>
-  </div>
+  {% endif %}
 </div>
