--- a/_layouts/world/2025/session.html
+++ b/_layouts/world/2025/session.html
@@ -1,23 +1,13 @@
 ---
-layout: world/2024/default
+layout: world/2025/default
 ---
 
 {% assign filteredSpeakers = site.world_speakers | where_exp:"speaker", "speaker.path contains page.speaker" |
-where_exp: 'item', 'item.path contains "2024"'%}
+where_exp: 'item', 'item.path contains "2025"'%}
 {% assign speaker = filteredSpeakers | first %}
 {% assign speakerUrl = speaker.path | split: '/' | last | remove_first: '.md' %}
 
-{% assign filteredSpeakersSecondary = site.world_speakers | where_exp:"speaker", "speaker.path contains
-page.second_speaker" | where_exp: 'item', 'item.path contains "2024"' %}
-{% assign speakerSecondary = filteredSpeakersSecondary | first %}
-{% assign speakerUrlSecondary = speakerSecondary.path | split: '/' | last | remove_first: '.md' %}
-
-{% assign filteredSpeakersThird = site.world_speakers | where_exp:"speaker", "speaker.path contains page.third_speaker" |
-where_exp: 'item', 'item.path contains "2024"' %}
-{% assign speakerThird = filteredSpeakersThird | first %}
-{% assign speakerUrlThird = speakerThird.path | split: '/' | last | remove_first: '.md' %}
-
-{% assign allSessions = site.world_sessions | where_exp: 'session', 'session.path contains "2024"' %}
+{% assign allSessions = site.world_sessions | where_exp: 'session', 'session.path contains "2025"' %}
 {% assign matchingSessions = allSessions | where: "multiple_speakers", true %}
 {% assign duplicateSessions = matchingSessions | where: "title", page.title | where: "description", page.description |
 where_exp: "session", "session.url != page.url" %}
@@ -31,82 +21,22 @@ where_exp: "session", "session.url != page.url" %}
 {% endif %}
 {% endfor %}
 
-<div class="sessionPage">
-  <div class="sessionContainer">
-    <div class="breadCrumbsContainer">
-      <a href="/world/2024" class="link">
-        World
-      </a>
-      <p>></p>
-      {% if day_segment == "day-0" %}
-      <a href="/world/2024/agenda/day-0" class="link">Agenda - Day One</a>
-      {% elsif day_segment == "day-1" %}
-      <a href="/world/2024/agenda/day-1" class="link">Agenda - Day Two</a>
-      {% elsif day_segment == "day-2" %}
-      <a href="/world/2024/agenda/day-2" class="link">Agenda - Day Three</a>
-      {% else %}
-      <a href="/world/2024/agenda/day-0" class="link">Agenda</a>
-      {% endif %}
-      <p>></p>
-      <p>{{ page.title }}</p>
-    </div>
-    <div class="topContainer">
-      <h2 class="sessionTitle">
-        {{ page.title }}
-      </h2>
-      <p class="description">
-        {{ content }}
-      </p>
-      <div class="informationContainer">
-        {% if page.time %}
-        <div class="sessionTimeContainer">
-          {% include world/2024/icons/clock.html %}
-
-          <p>{{ page.time }}</p>
-        </div>
-        {% else %}
-        <div class="placeHolderContainer">
-        </div>
-        {% endif %}
-        {% if day_segment != "" %}
-        <div class="sessionDateContainer">
-          {% include world/2024/icons/calendar.html %}
-
-          {% if day_segment == "day-0" %}
-          <p>September 25th</p>
-          {% elsif day_segment == "day-1" %}
-          <p>September 26th</p>
-          {% elsif day_segment == "day-2" %}
-          <p>September 27th</p>
-          {% endif %}
-        </div>
-        {% else %}
-        <div class="placeHolderContainer">
-        </div>
-        {% endif %}
-        {% if page.location %}
-        <div class="sessionLocationContainer">
-          {% include world/2024/icons/location.html %}
-
-          <p>{{ page.location }}</p>
-        </div>
-        {% else %}
-        <div class="placeHolderContainer">
-        </div>
-        {% endif %}
-      </div>
-    </div>
-
-    <div class="bottomContainer common-shape--top-white-down-left">
-      {% if speaker %}
-      {% include world/2024/session-speaker-card.html speaker=speaker %}
-      {% endif %}
-      {% if speakerSecondary %}
-      {% include world/2024/session-speaker-card.html speaker=speakerSecondary %}
-      {% endif %}
-      {% if speakerThird %}
-      {% include world/2024/session-speaker-card.html speaker=speakerThird %}
-      {% endif %}
-    </div>
+<div class="session-page">
+  <div class="session-content">
+    <h1>{{ page.title }}</h1>
+    <h3>{{ speaker.first_name}} {{ speaker.last_name}} {% if speaker.company %}, {{ speaker.company }}{% endif %}</h3>
+    <p>{{content}}</p>
+  </div>
+  <div>
+    {% if speaker %}
+      {%  include world/2025/components/speaker_card.html
+            first_name=speaker.first_name
+            last_name=speaker.last_name
+            tagline=speaker.tagline
+            company=speaker.company
+            photo=speaker.image_path
+            path=speaker.path
+      %}
+    {% endif %}
   </div>
 </div>
