--- a/_sass/world/2025/modules/_session_page.scss
+++ b/_sass/world/2025/modules/_session_page.scss
@@ -6,7 +6,7 @@
   justify-content: space-between;
   align-items: flex-start;
 
-  @include media(MobileScreens) {
+  @include media(MobileAndTabletScreens) {
     display: block;
     padding: 0 5%;
   }
@@ -15,7 +15,7 @@
 .session-page .session-content {
   width: 65%;
 
-  @include media(MobileScreens) {
+  @include media(MobileAndTabletScreens) {
     width: 100%;
   }
 
@@ -43,5 +43,9 @@
 .session-page .speaker-card {
   @include media(MobileScreens) {
     margin: 50px auto;
+  }
+
+  @include media(TabletScreens) {
+    margin-top: 100px;
   }
 }
